--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "buildAPKWindows": "cd android && gradlew clean && cd .. && react-native run-android --variant=release",
+    "buildBundleWindows": "cd android && gradlew clean && gradlew bundleRelease",
+    "androidWindows": "cd android && gradlew clean && cd .. && react-native run-android",
+    "androidLinux": "cd android && ./gradlew clean && cd .. && react-native run-android",
+    "restart": "react-native start -- --reset-cache"
   },
   "dependencies": {
     "react": "16.13.1",
@@ -18,7 +23,10 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^6.5.1",
+    "eslint-import-resolver-babel-module": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-test-renderer": "16.13.1"
