--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "easy-peasy": "^4.0.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-keychain": "^6.2.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
