Updated JS files

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@react-navigation/stack": "^5.14.2",
     "apisauce": "^2.0.1",
     "easy-peasy": "^4.0.1",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-keyboard": "^2.0.0",
     "react-native-keychain": "^6.2.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
