--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "react-native": "0.63.4",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-get-random-values": "^1.5.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-keyboard": "^2.0.0",
     "react-native-keychain": "^6.2.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
