--- a/package.json
+++ b/package.json
@@ -29,11 +29,15 @@
     "react-native-get-random-values": "^1.5.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-keyboard": "^2.0.0",
+    "react-native-image-picker": "^3.1.4",
     "react-native-keychain": "^6.2.0",
+    "react-native-popup-menu": "^0.15.10",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.0",
+    "react-native-vector-icons": "^8.0.0",
     "redux-logger": "^3.0.6",
+    "rn-fetch-blob": "^0.12.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
