--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@react-navigation/stack": "^5.14.2",
     "apisauce": "^2.0.1",
     "easy-peasy": "^4.0.1",
+    "link-preview-js": "^2.1.3",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-communications": "^2.2.1",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-get-random-values": "^1.5.1",
@@ -31,6 +33,7 @@
     "react-native-image-keyboard": "^2.0.0",
     "react-native-image-picker": "^3.1.4",
     "react-native-keychain": "^6.2.0",
+    "react-native-parsed-text": "0.0.22",
     "react-native-popup-menu": "^0.15.10",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
